@@ -1,0 +1,228 @@
+package com.planet_ink.coffee_mud.Abilities.Skills;
+import com.planet_ink.coffee_mud.core.interfaces.*;
+import com.planet_ink.coffee_mud.core.*;
+import com.planet_ink.coffee_mud.core.collections.*;
+import com.planet_ink.coffee_mud.Abilities.interfaces.*;
+import com.planet_ink.coffee_mud.Areas.interfaces.*;
+import com.planet_ink.coffee_mud.Behaviors.interfaces.*;
+import com.planet_ink.coffee_mud.CharClasses.interfaces.*;
+import com.planet_ink.coffee_mud.Commands.interfaces.*;
+import com.planet_ink.coffee_mud.Common.interfaces.*;
+import com.planet_ink.coffee_mud.Exits.interfaces.*;
+import com.planet_ink.coffee_mud.Items.interfaces.*;
+import com.planet_ink.coffee_mud.Libraries.interfaces.*;
+import com.planet_ink.coffee_mud.Locales.interfaces.*;
+import com.planet_ink.coffee_mud.MOBS.interfaces.*;
+import com.planet_ink.coffee_mud.Races.interfaces.*;
+
+import java.util.*;
+
+/*
+   Copyright 2016-2016 Bo Zimmerman
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+	   http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+
+
+public class Skill_TailSwipe extends StdSkill
+{
+	@Override
+	public String ID()
+	{
+		return "Skill_TailSwipe";
+	}
+
+	private final static String	localizedName	= CMLib.lang().L("Tail Swipe");
+
+	@Override
+	public String name()
+	{
+		return localizedName;
+	}
+
+	private static final String[]	triggerStrings	= I(new String[] { "TAILSWIPE" });
+
+	@Override
+	public int abstractQuality()
+	{
+		return Ability.QUALITY_MALICIOUS;
+	}
+
+	@Override
+	public String[] triggerStrings()
+	{
+		return triggerStrings;
+	}
+
+	@Override
+	protected int canAffectCode()
+	{
+		return 0;
+	}
+
+	@Override
+	protected int canTargetCode()
+	{
+		return Ability.CAN_MOBS;
+	}
+
+	@Override
+	public int classificationCode()
+	{
+		return Ability.ACODE_SKILL | Ability.DOMAIN_MARTIALLORE;
+	}
+
+	@Override
+	public int usageType()
+	{
+		return USAGE_MOVEMENT;
+	}
+
+	@Override
+	public long flags()
+	{
+		return Ability.FLAG_MOVING;
+	}
+
+	protected int		enhancement	= 0;
+	protected boolean	doneTicking	= false;
+
+	@Override
+	public int abilityCode()
+	{
+		return enhancement;
+	}
+
+	@Override
+	public void setAbilityCode(int newCode)
+	{
+		enhancement = newCode;
+	}
+
+	@Override
+	public void affectPhyStats(Physical affected, PhyStats affectableStats)
+	{
+		super.affectPhyStats(affected,affectableStats);
+		if(!doneTicking)
+			affectableStats.setDisposition(affectableStats.disposition()|PhyStats.IS_SITTING);
+	}
+
+	@Override
+	public boolean okMessage(final Environmental myHost, final CMMsg msg)
+	{
+		if(!(affected instanceof MOB))
+			return true;
+
+		final MOB mob=(MOB)affected;
+		if((doneTicking)&&(msg.amISource(mob)))
+			unInvoke();
+		else
+		if(msg.amISource(mob)&&(msg.sourceMinor()==CMMsg.TYP_STAND))
+			return false;
+		return true;
+	}
+
+	@Override
+	public void unInvoke()
+	{
+		if(!(affected instanceof MOB))
+			return;
+		final MOB mob=(MOB)affected;
+		if(canBeUninvoked())
+			doneTicking=true;
+		super.unInvoke();
+		if(canBeUninvoked() && (mob!=null))
+		{
+			final Room R=mob.location();
+			if((R!=null)&&(!mob.amDead()))
+			{
+				final CMMsg msg=CMClass.getMsg(mob,null,CMMsg.MSG_NOISYMOVEMENT,L("<S-NAME> regain(s) <S-HIS-HER> feet."));
+				if(R.okMessage(mob,msg)&&(!mob.amDead()))
+				{
+					R.send(mob,msg);
+					CMLib.commands().postStand(mob,true);
+				}
+			}
+			else
+				mob.tell(L("You regain your feet."));
+		}
+	}
+
+	@Override
+	public int castingQuality(MOB mob, Physical target)
+	{
+		if((mob!=null)&&(target!=null))
+		{
+			if(mob.isInCombat()&&(mob.rangeToTarget()>0))
+				return Ability.QUALITY_INDIFFERENT;
+			if(mob.charStats().getBodyPart(Race.BODY_TAIL)<=0)
+				return Ability.QUALITY_INDIFFERENT;
+		}
+		return super.castingQuality(mob,target);
+	}
+
+	@Override
+	public boolean invoke(MOB mob, List<String> commands, Physical givenTarget, boolean auto, int asLevel)
+	{
+		if(mob.isInCombat()&&(mob.rangeToTarget()>1)&&(!auto))
+		{
+			mob.tell(L("You are too far away to tail swipe!"));
+			return false;
+		}
+		if(mob.charStats().getBodyPart(Race.BODY_TAIL)<=0)
+		{
+			mob.tell(L("You need a tail to do this."));
+			return false;
+		}
+		final MOB target=this.getTarget(mob,commands,givenTarget);
+		if(target==null)
+			return false;
+
+		if(!super.invoke(mob,commands,givenTarget,auto,asLevel))
+			return false;
+
+		// now see if it worked
+		final int chance=(mob.charStats().getStat(CharStats.STAT_STRENGTH)-target.charStats().getStat(CharStats.STAT_DEXTERITY))*2;
+		final boolean success=proficiencyCheck(mob,chance,auto);
+		if(success)
+		{
+			invoker=mob;
+			final int topDamage=(adjustedLevel(mob,asLevel)/4)+1;
+			int damage=CMLib.dice().roll(1,topDamage,0);
+			final Room R=mob.location();
+			final CMMsg msg=CMClass.getMsg(mob,target,this,CMMsg.MSK_MALICIOUS_MOVE|CMMsg.TYP_JUSTICE|(auto?CMMsg.MASK_ALWAYS:0),null);
+			if((R!=null)&&(R.okMessage(mob,msg)))
+			{
+				R.send(mob,msg);
+				if(msg.value()>0)
+					damage = (int)Math.round(CMath.div(damage,2.0));
+				CMLib.combat().postDamage(mob,target,this,damage,
+						CMMsg.MASK_ALWAYS|CMMsg.MASK_SOUND|CMMsg.MASK_MOVE|CMMsg.TYP_JUSTICE,Weapon.TYPE_BASHING,
+						L("^F^<FIGHT^><S-NAME> <DAMAGE> <T-NAME> with a tail swipe!^</FIGHT^>^?@x1",CMLib.protocol().msp("bashed1.wav",30)));
+				int tripChance = (chance > 0) ? chance/2 : chance*2;
+				if((msg.value()<=0)
+				&&(CMLib.flags().isStanding(target))
+				&&(proficiencyCheck(mob,tripChance,auto)))
+				{
+					if(maliciousAffect(mob,target,asLevel,2,CMMsg.MSK_MALICIOUS_MOVE|CMMsg.TYP_JUSTICE|(auto?CMMsg.MASK_ALWAYS:0)) != null)
+						R.show(mob,target,CMMsg.MSG_OK_ACTION,L("<S-NAME> hit(s) the floor!"));
+				}
+			}
+		}
+		else
+			return maliciousFizzle(mob,target,L("<S-NAME> fail(s) to tail swipe <T-NAMESELF>."));
+
+		// return whether it worked
+		return success;
+	}
+}
