@@ -2008,6 +2008,12 @@ Example  : locatealcohol\n\r\
 The player uses their superior sense of smell and their strong motivation \
 to locate the nearest source of liquor.
 
+LONG_BREATH=SKILL_LONGBREATH
+LONGBREATH=SKILL_LONGBREATH
+SKILL_LONGBREATH=<ABILITY>\
+This skill grants the ability to hold ones breathe for a period, allowing \
+one to forego damage when under water or otherwise unable to breathe. 
+
 THIEF_LORE=LORE
 LORE=<ABILITY>\
 Usage    : LORE [ITEM NAME] \n\r\
@@ -3491,6 +3497,14 @@ SWORD_PROFICIENCY=<ABILITY>\
 The player is proficient with sword, gaining the ability to use \
 them even if their current class training would not make it \
 feasible normally.
+
+SKILL_TAILSWIPE=TAILSWIPE
+TAILSWIPE=<ABILITY>\
+Usage    : TAILSWIPE [TARGET NAME] \n\r\
+Example  : tailswipe orc\n\r\
+The character uses their tail to make a powerful swipe at the legs \
+of his or her enemies with their tail.  This will result in some \
+damage, and possibly tripping them.
 
 THIEF_TAGTURF=TAG_TURF
 TAG_TURF=<ABILITY>\
