@@ -20,9 +20,10 @@
    19. ZapperMask now supports IFSTAT, CLASSTYPE, SUBNAME, WEAPONTYPE, WEAPONCLASS, WEAPONAMMO
    20. 14 new Proficiency Skills, for overriding Class Restrictions
    21. Halflings get Fast Slinging, Sling Proficiency, Humans get Diligent Studying
-   22. New Skills: Devour Corpse
+   22. New Skills: Devour Corpse, Tail Swipe, Long Breath
    23. Ogres got Bad Reputation, Gnoll gets Devour Corpse, Svirfneblin gets Untraceable
-   24. Githyanki get Astral Step, Slow Learner
+   24. Githyanki get Astral Step, Slow Learner, Lizard Men get Tail Swipe, Long Breath
+   
    
 # Build 5.9.4 Released 08/03/2016
    1. Qualify now shows language limits
